--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -215,7 +215,7 @@
 
 a,
 body {
-  color: #7f7f7f;
+  color: #555555;
   font: 400 22px/30px Lato, Arial, Helvetica, sans-serif;
   -webkit-text-size-adjust: none;
 }
