--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,188 +2,100 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url(/fonts/Montserrat/montserrat-v15-latin-ext_latin-regular.eot);
   src: local(""),
-    url("/fonts/montserrat-v15-latin-ext_latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/montserrat-v15-latin-ext_latin-regular.woff2")
-      format("woff2"),
+    url("/fonts/montserrat-v15-latin-ext_latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/montserrat-v15-latin-ext_latin-regular.woff") format("woff"),
-    /* Modern Browsers */
-      url("/fonts/montserrat-v15-latin-ext_latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/montserrat-v15-latin-ext_latin-regular.svg#Montserrat")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/montserrat-v15-latin-ext_latin-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratSemiBold";
-  src: url("/fonts/montserrat-v15-latin-ext_latin-600.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/montserrat-v15-latin-ext_latin-600.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/montserrat-v15-latin-ext_latin-600.woff2")
-      format("woff2"),
+    url("/fonts/montserrat-v15-latin-ext_latin-600.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/montserrat-v15-latin-ext_latin-600.woff") format("woff"),
-    /* Modern Browsers */ url("/fonts/montserrat-v15-latin-ext_latin-600.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/montserrat-v15-latin-ext_latin-600.svg#Montserrat")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/montserrat-v15-latin-ext_latin-600.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratBold";
-  src: url("/fonts/montserrat-v15-latin-ext_latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/montserrat-v15-latin-ext_latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/montserrat-v15-latin-ext_latin-700.woff2")
-      format("woff2"),
+    url("/fonts/montserrat-v15-latin-ext_latin-700.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/montserrat-v15-latin-ext_latin-700.woff") format("woff"),
-    /* Modern Browsers */ url("/fonts/montserrat-v15-latin-ext_latin-700.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/montserrat-v15-latin-ext_latin-700.svg#Montserrat")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/montserrat-v15-latin-ext_latin-700.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "LatoLight";
-  src: url("/fonts/lato-v17-latin-ext_latin-300.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/lato-v17-latin-ext_latin-300.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/lato-v17-latin-ext_latin-300.woff2")
-      format("woff2"),
+    url("/fonts/lato-v17-latin-ext_latin-300.woff2") format("woff2"),
     /* Super Modern Browsers */ url("/fonts/lato-v17-latin-ext_latin-300.woff")
-      format("woff"),
-    /* Modern Browsers */ url("/fonts/lato-v17-latin-ext_latin-300.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/lato-v17-latin-ext_latin-300.svg#Lato") format("svg"); /* Legacy iOS */
+      format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Lato";
-  src: url("/fonts/lato-v17-latin-ext_latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/lato-v17-latin-ext_latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/lato-v17-latin-ext_latin-regular.woff2")
-      format("woff2"),
+    url("/fonts/lato-v17-latin-ext_latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/lato-v17-latin-ext_latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("/fonts/lato-v17-latin-ext_latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/lato-v17-latin-ext_latin-regular.svg#Lato") format("svg"); /* Legacy iOS */
+      url("/fonts/lato-v17-latin-ext_latin-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "LatoBold";
-  src: url("/fonts/lato-v17-latin-ext_latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/lato-v17-latin-ext_latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/lato-v17-latin-ext_latin-700.woff2")
-      format("woff2"),
+    url("/fonts/lato-v17-latin-ext_latin-700.woff2") format("woff2"),
     /* Super Modern Browsers */ url("/fonts/lato-v17-latin-ext_latin-700.woff")
-      format("woff"),
-    /* Modern Browsers */ url("/fonts/lato-v17-latin-ext_latin-700.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/lato-v17-latin-ext_latin-700.svg#Lato") format("svg"); /* Legacy iOS */
+      format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Raleway";
-  src: url("/fonts/raleway-v19-latin-ext_latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/raleway-v19-latin-ext_latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/raleway-v19-latin-ext_latin-regular.woff2")
-      format("woff2"),
+    url("/fonts/raleway-v19-latin-ext_latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/raleway-v19-latin-ext_latin-regular.woff") format("woff"),
-    /* Modern Browsers */ url("/fonts/raleway-v19-latin-ext_latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/raleway-v19-latin-ext_latin-regular.svg#Raleway")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/raleway-v19-latin-ext_latin-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "RalewayBold";
-  src: url("/fonts/raleway-v19-latin-ext_latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/raleway-v19-latin-ext_latin-700.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/raleway-v19-latin-ext_latin-700.woff2")
-      format("woff2"),
+    url("/fonts/raleway-v19-latin-ext_latin-700.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/raleway-v19-latin-ext_latin-700.woff") format("woff"),
-    /* Modern Browsers */ url("/fonts/raleway-v19-latin-ext_latin-700.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/raleway-v19-latin-ext_latin-700.svg#Raleway") format("svg"); /* Legacy iOS */
+      url("/fonts/raleway-v19-latin-ext_latin-700.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "BebasNeue";
-  src: url("/fonts/bebas-neue-v2-latin-ext_latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/bebas-neue-v2-latin-ext_latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/bebas-neue-v2-latin-ext_latin-regular.woff2")
-      format("woff2"),
+    url("/fonts/bebas-neue-v2-latin-ext_latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/bebas-neue-v2-latin-ext_latin-regular.woff") format("woff"),
-    /* Modern Browsers */
-      url("/fonts/bebas-neue-v2-latin-ext_latin-regular.ttf") format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/bebas-neue-v2-latin-ext_latin-regular.svg#BebasNeue")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/bebas-neue-v2-latin-ext_latin-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: NothingYouCouldDo;
-  src: url("/fonts/nothing-you-could-do-v10-latin-regular.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("/fonts/nothing-you-could-do-v10-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("/fonts/nothing-you-could-do-v10-latin-regular.woff2")
-      format("woff2"),
+    url("/fonts/nothing-you-could-do-v10-latin-regular.woff2") format("woff2"),
     /* Super Modern Browsers */
-      url("/fonts/nothing-you-could-do-v10-latin-regular.woff") format("woff"),
-    /* Modern Browsers */
-      url("/fonts/nothing-you-could-do-v10-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("/fonts/nothing-you-could-do-v10-latin-regular.svg#NothingYouCouldDo")
-      format("svg"); /* Legacy iOS */
+      url("/fonts/nothing-you-could-do-v10-latin-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
